Fixed documentation table formatting to be more legible

--- a/matl_online/static/css/style.css
+++ b/matl_online/static/css/style.css
@@ -45,18 +45,15 @@ pre.code {
     white-space: pre;
 }
 
-th {
-    font-size: 14px;
-}
-
 .btn-inverse.active {
-    background-color: #080808 \9;
+    background-color: #080808;
 }
 
-td {
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody th, .dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody td {
+    vertical-align: top;
     font-size: 12px;
     font-family: monospace;
-    vertical-align: top;
+    white-space: pre-line;
 }
 
 .explain {
